k8s/infra/common/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: 观测
    gethomepage.dev/name: Flux Operator
    gethomepage.dev/icon: flux-cd.svg
    gethomepage.dev/description: Flux Operator
spec:
  hostnames:
    - flux.int.${MAIN_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: flux-operator
          namespace: flux-system
          port: 9080
